--- a/A- current/Fpga implementation/16_bit/db/ram_mod.lpc.html
+++ b/A- current/Fpga implementation/16_bit/db/ram_mod.lpc.html
@@ -16,8 +16,8 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >inst40</TD>
-<TD >0</TD>
+<TD >inst53</TD>
+<TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -418,6 +418,22 @@
 <TR >
 <TD >SsfvD|inst13</TD>
 <TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >SsfvD|inst53</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
